feat: customer entity and related CRUD
