# src/main/java/hei/school/demo/entity/Customer.java
@@ -1,0 +1,15 @@
+package hei.school.demo.entity;
+
+import java.util.UUID;
+import lombok.AllArgsConstructor;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+@AllArgsConstructor
+@NoArgsConstructor
+@Data
+public class Customer {
+  private UUID id;
+  private String fullName;
+  private String email;
+}
